# Stretto

./: .clang-format  .gitignore  CMakeLists.txt  Drawing1.vsd  LICENSE.txt  README.md
CMake/: CollectJuceFiles.cmake  build.bat
Doc/Powerpoint Presentations/: Stretto.pptx
Doc/Powerpoint Presentations/Components/: Schema.pptx
Doc/Powerpoint Presentations/User Scenario/: Guitar Riff Extraction.pptx
Doc/Stretto/: General.one  Module.one  Open Notebook.onetoc2  Schema.one
Doc/Stretto/OneNote_RecycleBin/: OneNote_DeletedPages.one  Open Notebook.onetoc2
Include/FXG/Stretto/: ConstexprStringEnum.h  FXGAlgorithms.h  MetaprogramingUtils.h  Result.h  StdAliases.h  StringEnum.h  StringEnum.h.orig
Include/FXG/Stretto/Analysis/: PluginDllRAII.h  PluginUtils.h
Include/FXG/Stretto/JUCEUtils/: FileUtils.h
Include/FXG/Stretto/Midi/: MidiReader.h
Include/FXG/Stretto/Piece/: MidiReader.h  MonophonicPart.h  MonophonicPiece.h
Include/FXG/Stretto/Piece/Monophonic/: AggregatedNode.h  CanonicNode.h  Part.h  PartBuilder.h  Piece.h
Include/FXG/Stretto/PluginAPI/: AnalysisModule.h  DllAPI.h  Fragment.h  IAnalysisProfile.h  IMDS.h  IPlugin.h  MusicalDataStructure.h  StructuralHierarchy.h  StructuralHierarchyLink.h
Include/FXG/Stretto/Theory/: Accidental.h  AggregatedNote.h  BasicNote.h  CanonicNote.h  ImperfectQuality.h  Interval.h  NoteDuration.h  NoteLetter.h  PerfectQuality.h  Pitch.h  Quality.h  TimeSignature.h  Tone.h
Include/FXG/Stretto/Theory/Piece/: AggregatedNode.h  CanonicNode.h  Part.h  PartBuilder.h  Piece.h
Include/FXG/Stretto/Utils/: ClassDeclHelpers.h  ConstexprHelpers.h  FXGAlgorithms.h  StdAliases.h  StdContainersUtils.h  StringEnum.h
Include/JUCE/: AudioBasics.h  AudioDevices.h  AudioFormats.h  AudioProcessors.h  Core.h  Cryptography.h  DataStructures.h  Events.h  GUIBasic.h  GUIExtra.h  Graphics.h  OpenGL.h  Video.h
MSVC/: Analysis.vcxproj  Analysis.vcxproj.filters  BuiltinPlugin.vcxproj  BuiltinPlugin.vcxproj.filters  GUI.vcxproj  GUI.vcxproj.filters  JUCE.vcxproj  JUCE.vcxproj.filters  JUCEUtils.vcxproj  JUCEUtils.vcxproj.filters  Midi.vcxproj  Midi.vcxproj.filters  Piece.vcxproj  Piece.vcxproj.filters  PluginAPI.vcxproj  PluginAPI.vcxproj.filters  Stretto.sln  Theory.vcxproj  Theory.vcxproj.filters  UnitTests.vcxproj  UnitTests.vcxproj.filters  Utils.vcxproj  Utils.vcxproj.filters  Utils.vcxproj.orig  googletest.vcxproj  googletest.vcxproj.filters
MSVC/Property Sheets/: GUI Internal Include.props  Google Test Compilation Flags.props  Include JUCE.props  Include googletest.props  Internal Include.props
MSVC/Property Sheets/Stretto/: Common Compilation Flags.props  Include Stretto.props  Output Directories.props  Stretto.props
MSVC/props/: Base config.props  Is unit test.props  Needs JUCE.props  Needs googletest.props
MSVC/vcxproj/SGG/: UnitTests.props  UnitTests.vcxproj  UnitTests.vcxproj.filters  Utils.props  Utils.vcxproj  Utils.vcxproj.filters
MSVC/vcxproj/SGG/Stretto/: Midi.props  Midi.vcxproj  Midi.vcxproj.filters  Schema.vcxproj  Schema.vcxproj.filters  Theory.props  Theory.vcxproj  Theory.vcxproj.filters
MSVC/vcxproj/SGG/Stretto/Plugin/: BuiltinPlugin.vcxproj  BuiltinPlugin.vcxproj.filters  TestPlugin.props  TestPlugin.vcxproj  TestPlugin.vcxproj.filters
Mockup/: Stretto.bmpr
Projects/: CMakeLists.txt
Projects/GUI/: CMakeLists.txt  GUI.jucer
Projects/GUI/Include/FXG/Stretto/GUI/Internal/: MainApplication.h  MainComponent.h  MainWindow.h
Projects/GUI/Source/: Main.cpp  MainApplication.cpp  MainComponent.cpp  MainWindow.cpp
Projects/Juce/: CMakeLists.txt  Juce.jucer
Projects/Piece/: CMakeLists.txt
Projects/Piece/Source/: MidiReader.cpp  MonophonicPart.cpp  MonophonicPiece.cpp
Projects/Piece/Source/Monophonic/: AggregatedNode.cpp  PartBuilder.cpp
Projects/Theory/: CMakeLists.txt  Theory.jucer
Projects/Theory/Source/: AggregatedNote.cpp  BasicNote.cpp  NoteDuration.cpp  Pitch.cpp  Quality.cpp  TimeSignature.cpp  Tone.cpp
Projects/UnitTests/: CMakeLists.txt
Projects/UnitTests/Source/: MidiReader.cpp  MonophonicPartTest.cpp  QualityTest.cpp
Projects/Utils/: CMakeLists.txt
Resource/UnitTests/: runascape.mid
Resource/UnitTests/Midi/: mtpdk.mid
Source/Analysis/: PluginDllRAII.cpp  PluginUtils.cpp
Source/BuiltinPlugin/: BuiltInPlugin.cpp  DllMain.cpp
Source/GUI/: Main.cpp  MainApplication.cpp  MainComponent.cpp  MainWindow.cpp
Source/JUCE/: juce_audio_basics.cpp  juce_audio_devices.cpp  juce_audio_formats.cpp  juce_audio_processors.cpp  juce_core.cpp  juce_cryptography.cpp  juce_data_structures.cpp  juce_events.cpp  juce_graphics.cpp  juce_gui_basics.cpp  juce_gui_extra.cpp  juce_opengl.cpp  juce_video.cpp
Source/JUCEUtils/: FileUtils.cpp
Source/Midi/: MidiReader.cpp
Source/Piece/Monophonic/: AggregatedNode.cpp  CanonicNode.cpp  Part.cpp  PartBuilder.cpp  Piece.cpp
Source/PluginAPI/: AnalysisModule.cpp  IPlugin.cpp  MusicalDataStructure.cpp  StructuralHierarchy.cpp  StructuralHierarchyLink.cpp
Source/SGG/Stretto/Midi/: Event.h  MidiInstrument.cpp  MidiInstrument.h  MidiPiece.cpp  MidiPiece.h  MidiTrack.cpp  MidiTrack.h  ReadMidiFile.cpp  ReadMidiFile.h
Source/SGG/Stretto/Plugin/BuiltinPlugin/: Converter.h  (+3 more)
Source/SGG/Stretto/Schema/: Fragment.h  SchemaAPI.h  StaticFragmentExtractionCheck.h
Source/SGG/UnitTests/Utils/: ClassDeclarationUtilsUnitTests.cpp  ConstexprUtilsUnitTests.cpp  Main.cpp  ResultUnitTests.cpp  SGGAlgorithmsUnitTests.cpp  StringEnumUnitTests.cpp
Source/SGG/Utils/: ClassDeclarationUtils.h  ConstexprUtils.h  Result.cpp  Result.h  SGGAlgorithms.h  StdAliases.h  StringEnum.h
Source/Theory/: Accidental.cpp  AggregatedNote.cpp  CanonicNote.cpp  Interval.cpp  NoteDuration.cpp  Pitch.cpp  Quality.cpp  TimeSignature.cpp  Tone.cpp
Source/Theory/Piece/: AggregatedNode.cpp  CanonicNode.cpp  Part.cpp  PartBuilder.cpp  Piece.cpp
Source/UnitTests/: ConstexprHelpersTest.cpp  IntervalTest.cpp  Main.cpp  MidiReaderTest.cpp  PluginTest.cpp  QualityTest.cpp  StringEnumTest.cpp
Source/Utils/: Result.cpp  StringEnum.cpp
Source/googletest/: gtest.cpp
Wiki/Layering/: Layering.pptx
(+54 files in other folders)
